--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <li class="dropbox__item"><a href="" class="dropbox__link last__link">Social Media Management</a></li>
                      </ul>
                   </li>
-                  <li class="navigation__item arrow"><a href="#" class="navigation__link dropbox">portfolio</a></li>
+                  <li class="navigation__item dropdown"><a href="#" class="navigation__link">portfolio</a></li>
                   <li class="navigation__item"><a href="#" class="navigation__link">blog</a></li>
                   <li class="navigation__item"><a href="#" class="navigation__link">contact us</a></li>
                </ul>
