--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                      <h2 class="name__title"><div class="name__icon"><span class="icon-clean-theme icn"></span></div>Clean Theme</h2>
                   </div>
                   <p class="article__text">Ut nec lorem id orci convallis porta. Donec pharetra neque eu velit dictum molestie. Duis porta gravida augue sed viverra. Quisque at nulla leo, non aliquet mi. </p>
-                  <div class="read__more"><span class="link__symbol">&#x3E;</span><a href="#" class="article__link">Read More</a></div>
+                  <div class="article__read-more"><span class="link__symbol">&#x3E;</span><a href="#" class="article__link">Read More</a></div>
                </div>
                <div class="article__item">
                   <div class="article__name">
@@ -101,8 +101,8 @@
       </main>
       <footer class="footer">
          <div class="footer__container container">
-            <span class="footer__copyright">© Copyright 2012 - BisLite Inc. All rights reserved. Some free icons used here are created by Brankic1979.com.
-               Client Logos are copyright and trademark of the respective owners / companies. </span>
+            <p class="footer__copyright">© Copyright 2012 - BisLite Inc. All rights reserved. Some free icons used here are created by Brankic1979.com.
+               Client Logos are copyright and trademark of the respective owners / companies. </p>
                <a href="#" class="header__logo footer__logo"><img class="logo__image" src="images/Logo_BisLite.png" alt="#"></a>
          </div>
       </footer>
