--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                      <h2 class="name__title"><div class="name__icon"><span class="icon-responsive-design icn"></span></div>Responsive Design</h2>
                   </div>
                   <p class="article__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi euismod placerat dui et tincidunt. Sed sollicitudin posuere auctor. Phasellus at ultricies nisl. Integer at leo eros.</p>
-                  <div class="read__more">
+                  <div class="article__read-more">
                      <span class="link__symbol">&#x3E;</span>
                      <a href="#" class="article__link">Read More</a>
                   </div>
@@ -75,7 +75,7 @@
                      <h2 class="name__title"><div class="name__icon"><span class="icon-fully-layerd-psd icn"></span></div>Fully layerd PSD</h2>
                   </div>
                   <p class="article__text">Phasellus lobortis metus non augue sodales volutpat. Vestibulum sit amet nibh eros, hendrerit venenatis est. In vitae nulla nec purus cursus pretium sed id magna.</p>
-                  <div class="read__more">
+                  <div class="article__read-more">
                      <span class="link__symbol">&#x3E;</span>
                      <a href="#" class="article__link">Read More</a>
                   </div>
@@ -85,7 +85,7 @@
                      <h2 class="name__title"><div class="name__icon"><span class="icon-ready-for-coding icn"></span></div>Ready for coding</h2>
                   </div>
                   <p class="article__text">Vivamus convallis feugiat mauris sed posuere. Nam rutrum, quam quis euismod commodo, elit est porta quam, non placerat eros neque porta ante. Fusce quis odio urna.</p>
-                  <div class="read__more">
+                  <div class="article__read-more">
                      <span class="link__symbol">&#x3E;</span>
                      <a href="#" class="article__link">Read More</a>
                   </div>
